--- a/Mobile/index.html
+++ b/Mobile/index.html
@@ -26,13 +26,13 @@
 
       	<div data-role="content">	
       		<ul data-role="listview">
-            <li>About
+            <li>Ventas
               <ul>
-                <li><a href="#aboutus" data-panel="main">About Us</a></li>
-                <li><a href="#aboutsv" data-panel="main">About Splitview</a></li>
+                <li><a href="#aboutus" data-panel="main">Boleta</a></li>
+                <li><a href="#aboutsv" data-panel="main">Factura</a></li>
               </ul>
             </li>
-            <li>Features
+            <li>Compras
               <ul>
                   <li><a href="#panels" data-panel="main">Panels</a></li>
                   <li><a href="#orientation" data-panel="main">Orientation</a></li>
