--- a/Mobile/index.html
+++ b/Mobile/index.html
@@ -30,18 +30,20 @@
               <ul>
                 <li><a href="#aboutus" data-panel="main">Boleta</a></li>
                 <li><a href="#aboutsv" data-panel="main">Factura</a></li>
+                <li><a href="#aboutsv" data-panel="main">Nota de Cr&eacute;dito</a></li>
+                <li><a href="#aboutsv" data-panel="main">Nota D&eacute;bito</a></li>
+                <li><a href="#aboutsv" data-panel="main">Guia de Despacho</a></li>
               </ul>
             </li>
             <li>Compras
               <ul>
-                  <li><a href="#panels" data-panel="main">Panels</a></li>
-                  <li><a href="#orientation" data-panel="main">Orientation</a></li>
-                  <li><a href="#scroll" data-panel="main">Scroll</a></li>
-                  <li><a href="#context" data-panel="main">Context Pages</a></li>
+                  <li><a href="#panels" data-panel="main">Factura</a></li>
+                  <li><a href="#aboutsv" data-panel="main">Nota de Cr&eacute;dito</a></li>
+                  <li><a href="#aboutsv" data-panel="main">Nota D&eacute;bito</a></li>
               </ul>
             </li>
-            <li><a href="#credits" data-panel="main">Credits</a></li>
-            <li><a href="#source" data-panel="main">Source@Github</a></li>
+            <li><a href="#credits" data-panel="main">Productos</a></li>
+            <li><a href="#source" data-panel="main">Caja</a></li>
           </ul>
       	</div><!-- /content -->
 
@@ -340,7 +342,7 @@
         <div data-role="footer" data-position="fixed" data-id="ew-footer" class="ui-splitview-hidden">
           <div data-role="navbar">
             <ul>
-              <li><a href="#main" class="ui-btn-active" data-transition="slideup">Main</a></li>
+              <li><a href="#main" class="ui-btn-active" data-transition="slideup">Principal</a></li>
               <li><a href="#demo" data-transition="slideup">Demos</a></li>
             </ul>
           </div><!-- /navbar -->
