--- a/Mobile/alpha.html
+++ b/Mobile/alpha.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-<script type="text/javascript" src="../js/jquery-1.4.5.js"></script>
-<script type="text/javascript" src="../js/alpha.js"></script>
-<script type="text/javascript" src="../js/jquery.mobile-1.4.5.min.js"></script>
-<link rel="stylesheet" href="../css/themes/default/jquery.mobile-1.4.5.min.css" />
+<script type="text/javascript" src="js/jquery-1.4.5.js"></script>
+<script type="text/javascript" src="js/alpha.js"></script>
+<script type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
+<link rel="stylesheet" href="css/themes/default/jquery.mobile-1.4.5.min.css" />
 </head>
 <body>
 	<div data-role="panel" data-id="menu" data-hash="crumbs"
