--- a/Mobile/beta.html
+++ b/Mobile/beta.html
@@ -2,7 +2,23 @@
 <head>
 <script type="text/javascript" src="js/jquery-1.4.5.js"></script>
 <script type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
+<script type="text/javascript" src="js/beta.js"></script>
 <link rel="stylesheet" href="css/themes/default/jquery.mobile-1.4.5.min.css" />
+<style type="text/css">
+#custom-div .ui-block-a {
+    width: 72% !important;
+}
+
+#custom-div .ui-block-b {
+    width: 28% !important;    
+}
+#logo-image{
+	outline-offset:-10px;  
+    border: 10px solid #999;
+  	text-align: center;
+  	width: 70%;
+}
+</style>
 </head>
 <body>
 	<div data-role="page" id="demo" data-hash="false">
@@ -56,19 +72,6 @@
 			</ul>
 		</div>
 		<!-- /content -->
-
-		<div data-role="footer" data-position="fixed" data-id="ew-footer">
-			<div data-role="navbar">
-				<ul>
-					<li><a href="#main" class="ui-btn-active"
-						data-transition="slideup">Main</a></li>
-					<li><a href="#demo" data-transition="slideup">Demos</a></li>
-				</ul>
-			</div>
-			<!-- /navbar -->
-			<h2 class="ui-splitview-hidden">Engineworks &copy CS8</h2>
-		</div>
-		<!-- /footer -->
 	</div>
 	<!-- /page -->
 
@@ -209,194 +212,88 @@
 							</div>
 						</div>
 					</div>
-					<hr>
-					<div data-role="fieldcontain">
-					<div class="ui-alt-icon"><!-- Class added to the wrapper -->
-    <a href="#" data-icon="arrow-r">Delete</a>
-    <a href="#" class="ui-btn ui-shadow ui-corner-all ui-icon-plus ui-btn-icon-notext ui-btn-inline">Plus</a>
-    <a href="#" class="ui-btn ui-shadow ui-corner-all ui-icon-minus ui-btn-icon-notext ui-btn-inline">Minus</a>
-    <a href="#" class="ui-btn ui-shadow ui-corner-all ui-icon-check ui-btn-icon-notext ui-btn-inline">Check</a>
-</div>
-						<table summary="This table lists all the JetBlue flights.">
-							<caption>Detalle Factura</caption>
-							<thead>
-								<tr>
-									<th scope="col">Flight:</th>
-									<th scope="col">From:</th>
-									<th scope="col">To:</th>
-								</tr>
-							</thead>
-							<tfoot>
-								<tr>
-									<td colspan="5">Total: 3 flights</td>
-								</tr>
-							</tfoot>
-							<tbody>
-								<tr>
-									<th scope="row"><a href="#" class="ui-btn ui-shadow ui-corner-all ui-icon-plus ui-btn-icon-notext ui-btn-b ui-btn-inline">Plus</a></th>
-									<td>Boston (BOS)</td>
-									<td>New York (JFK)</td>
-								</tr>
-								<tr>
-									<th scope="row">JetBlue 354</th>
-									<td>San Francisco (SFO)</td>
-									<td>Los Angeles (LAX)</td>
-								</tr>
-								<tr>
-									<th scope="row">JetBlue 465</th>
-									<td>New York (JFK)</td>
-									<td>Portland (PDX)</td>
-								</tr>
-							</tbody>
-						</table>
-					</div>
-					<div data-role="fieldcontain">
-						<label for="slider">Slider:</label> <input type="range"
-							name="slider" id="slider" value="0" min="0" max="100" />
-					</div>
-
-
-					<div data-role="fieldcontain">
-						<fieldset data-role="controlgroup">
-							<legend>Choose as many snacks as you'd like:</legend>
-								<input type="checkbox" name="checkbox-1a" id="checkbox-1a" class="custom" /> 
-								<label for="checkbox-1a">Cheetos</label>
-								<input type="checkbox" name="checkbox-2a" id="checkbox-2a" class="custom" /> <label for="checkbox-2a">Doritos</label> <input
-								type="checkbox" name="checkbox-3a" id="checkbox-3a"
-								class="custom" /> <label for="checkbox-3a">Fritos</label> <input
-								type="checkbox" name="checkbox-4a" id="checkbox-4a"
-								class="custom" /> <label for="checkbox-4a">Sun Chips</label>
-						</fieldset>
-					</div>
-
-					<div data-role="fieldcontain">
-						<fieldset data-role="controlgroup" data-type="horizontal">
-							<legend>Font styling:</legend>
-							<input type="checkbox" name="checkbox-6" id="checkbox-6"
-								class="custom" /> <label for="checkbox-6">b</label> <input
-								type="checkbox" name="checkbox-7" id="checkbox-7" class="custom" />
-							<label for="checkbox-7"><em>i</em></label> <input type="checkbox"
-								name="checkbox-8" id="checkbox-8" class="custom" /> <label
-								for="checkbox-8">u</label>
-						</fieldset>
-					</div>
-
-					<div data-role="fieldcontain">
-						<fieldset data-role="controlgroup">
-							<legend>Choose a pet:</legend>
-							<input type="radio" name="radio-choice-1" id="radio-choice-1"
-								value="choice-1" checked="checked" /> <label
-								for="radio-choice-1">Cat</label> <input type="radio"
-								name="radio-choice-1" id="radio-choice-2" value="choice-2" />
-							<label for="radio-choice-2">Dog</label> <input type="radio"
-								name="radio-choice-1" id="radio-choice-3" value="choice-3" />
-							<label for="radio-choice-3">Hamster</label> <input type="radio"
-								name="radio-choice-1" id="radio-choice-4" value="choice-4" />
-							<label for="radio-choice-4">Lizard</label>
-						</fieldset>
-					</div>
-
-					<div data-role="fieldcontain">
-						<fieldset data-role="controlgroup" data-type="horizontal">
-							<legend>Layout view:</legend>
-							<input type="radio" name="radio-choice-b" id="radio-choice-c"
-								value="on" checked="checked" /> <label for="radio-choice-c">List</label>
-							<input type="radio" name="radio-choice-b" id="radio-choice-d"
-								value="off" /> <label for="radio-choice-d">Grid</label> <input
-								type="radio" name="radio-choice-b" id="radio-choice-e"
-								value="other" /> <label for="radio-choice-e">Gallery</label>
-						</fieldset>
-					</div>
-
-					<div data-role="fieldcontain">
-						<label for="select-choice-1" class="select">Choose
-							shipping method:</label> <select name="select-choice-1"
-							id="select-choice-1">
-							<option value="standard">Standard: 7 day</option>
-							<option value="rush">Rush: 3 days</option>
-							<option value="express">Express: next day</option>
-							<option value="overnight">Overnight</option>
-						</select>
-					</div>
-
-					<div data-role="fieldcontain">
-						<label for="select-choice-3" class="select">Your state:</label> <select
-							name="select-choice-3" id="select-choice-3">
-							<option value="AL">Alabama</option>
-							<option value="AK">Alaska</option>
-							<option value="AZ">Arizona</option>
-							<option value="AR">Arkansas</option>
-							<option value="CA">California</option>
-							<option value="CO">Colorado</option>
-							<option value="CT">Connecticut</option>
-							<option value="DE">Delaware</option>
-							<option value="FL">Florida</option>
-							<option value="GA">Georgia</option>
-							<option value="HI">Hawaii</option>
-							<option value="ID">Idaho</option>
-							<option value="IL">Illinois</option>
-							<option value="IN">Indiana</option>
-							<option value="IA">Iowa</option>
-							<option value="KS">Kansas</option>
-							<option value="KY">Kentucky</option>
-							<option value="LA">Louisiana</option>
-							<option value="ME">Maine</option>
-							<option value="MD">Maryland</option>
-							<option value="MA">Massachusetts</option>
-							<option value="MI">Michigan</option>
-							<option value="MN">Minnesota</option>
-							<option value="MS">Mississippi</option>
-							<option value="MO">Missouri</option>
-							<option value="MT">Montana</option>
-							<option value="NE">Nebraska</option>
-							<option value="NV">Nevada</option>
-							<option value="NH">New Hampshire</option>
-							<option value="NJ">New Jersey</option>
-							<option value="NM">New Mexico</option>
-							<option value="NY">New York</option>
-							<option value="NC">North Carolina</option>
-							<option value="ND">North Dakota</option>
-							<option value="OH">Ohio</option>
-							<option value="OK">Oklahoma</option>
-							<option value="OR">Oregon</option>
-							<option value="PA">Pennsylvania</option>
-							<option value="RI">Rhode Island</option>
-							<option value="SC">South Carolina</option>
-							<option value="SD">South Dakota</option>
-							<option value="TN">Tennessee</option>
-							<option value="TX">Texas</option>
-							<option value="UT">Utah</option>
-							<option value="VT">Vermont</option>
-							<option value="VA">Virginia</option>
-							<option value="WA">Washington</option>
-							<option value="WV">West Virginia</option>
-							<option value="WI">Wisconsin</option>
-							<option value="WY">Wyoming</option>
-						</select>
-					</div>
-
-					<div data-role="fieldcontain">
-						<label for="select-choice-a" class="select">Choose
-							shipping method:</label> <select name="select-choice-a"
-							id="select-choice-a" data-native-menu="false">
-							<option>Custom menu example</option>
-							<option value="standard">Standard: 7 day</option>
-							<option value="rush">Rush: 3 days</option>
-							<option value="express">Express: next day</option>
-							<option value="overnight">Overnight</option>
-						</select>
-					</div>
-
-					<div class="ui-body ui-body-b">
-						<fieldset class="ui-grid-a">
-							<div class="ui-block-a">
-								<button type="submit" data-theme="d">Cancel</button>
+				<hr>
+				<div data-role="fieldcontain">
+					<table data-role="table" id="table-column-toggle" data-mode="columntoggle" class="ui-responsive table-stroke">
+						<thead>
+							<tr>
+								<th data-priority="1" id="agregar_producto"><a href="#" class="ui-btn ui-shadow ui-corner-all ui-icon-plus ui-btn-icon-notext ui-btn-inline" >Agregar</a></th>
+								<th data-priority="1">Cod Prod.</th>
+								<th data-priority="5">Nombre Producto</th>
+								<th data-priority="2">Descripcion</th>
+								<th data-priority="1">Cantidad</th>
+								<th data-priority="1">U. Medida</th>
+								<th data-priority="2">Precio</th>
+								<th data-priority="1">% Desc.</th>
+								<th data-priority="2"><abbr title="Rotten Tomato Rating">Sub Total</abbr></th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr class="trs" id="trs_1">
+								<td id="eliminar_producto_1" class="eliminar_producto">
+									<a href="#" class="ui-btn ui-shadow ui-corner-all ui-icon-minus ui-btn-icon-notext ui-btn-inline">Eliminar</a>
+								</td>
+								<td>
+								<select name="cod_producto_1" id="cod_producto_1">
+										<option id="p_1" value="">01 (Impr.)</option>
+										<option id="p_2" value="">02 (Insumos)</option>
+										<option id="p_3" value="">03 (Tintas)</option>
+								</select>
+								</td>
+								<td><input name="n_producto_1" id="n_producto_1"></input></td>
+								<td><input name="d_producto_1" id="d_producto_1"></input></td>
+								<td><input name="c_producto_1" id="c_producto_1"></input></td>
+								<td><input name="u_producto_1" id="u_producto_1"></input></td>
+								<td><input name="p_producto_1" id="p_producto_1"></input></td>
+								<td><input name="desc_producto_1" id="desc_producto_1"></input></td>
+								<td><input name="sub_producto_1" id="sub_producto_1"></input></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+				<div data-role="fieldcontain">
+					<div class="ui-grid-a">
+						<div class="ui-block-a"></div>
+						<div class="ui-block-b">
+							<div data-role="fieldcontain">
+								<label for="sub_total">Sub Total:</label> <input type="number"
+									name="sub_total" id="sub_total" pattern="[0-9]*" value="0"
+									disabled>
 							</div>
-							<div class="ui-block-b">
-								<button type="submit" data-theme="a">Submit</button>
+							<div data-role="fieldcontain">
+								<label for="desc">Descuento Global % : </label> <input
+									type="number" name="desc" id="desc" pattern="[0-9]*" value="0"
+									disabled>
 							</div>
-						</fieldset>
+							<div data-role="fieldcontain">
+								<label for="neto">Monto Neto:</label> <input type="number"
+									name="neto" id="neto" pattern="[0-9]*" value="0" disabled>
+							</div>
+							<div data-role="fieldcontain">
+								<label for="iva">IVA: (19%)</label> <input type="number"
+									name="iva" id="iva" pattern="[0-9]*" value="0" disabled>
+							</div>
+							<div data-role="fieldcontain">
+								<label for="total">Total:</label> <input type="number"
+									name="total" id="total" pattern="[0-9]*" value="0" disabled>
+							</div>
+						</div>
 					</div>
+				</div>
+				<hr>
+				<div data-role="fieldcontain">
+					<fieldset class="ui-grid-b">
+						<div class="ui-block-a">
+							<button type="submit" data-theme="d">Validar y Visualizar</button>
+						</div>
+						<div class="ui-block-b">
+							<button type="submit" data-theme="a">Limpiar Documento</button>
+						</div>
+						<div class="ui-block-c">
+							<button type="submit" data-theme="a">Volver</button>
+						</div>
+					</fieldset>
+				</div>
 				</form>
 			</div>
 
