--- a/Mobile/index2.html
+++ b/Mobile/index2.html
@@ -6,11 +6,12 @@
 <meta name="keywords" content="HTML,CSS,XML,JavaScript">
 <meta name="author" content="Alexis Orostica">
 <title>#</title>
-<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/jquery-1.4.5.js"></script>
+<script type="text/javascript" src="js/index2.js"></script>
 <link rel="stylesheet" href="css/index2.css" />
 </head>
 <body>
 <iframe frameBorder="0" scrolling="no" src="alpha.html" id="iframe_alpha"></iframe>
-<iframe frameBorder="0" scrolling="no" src="beta.html" id="iframe_beta"></iframe>	
+<iframe frameBorder="0"  src="beta.html" id="iframe_beta"></iframe>	
 </body>
 </html>
